# notes

code/: CMakeLists.txt  MainWindow.cpp
hello/: MainWindow.h  appMain.cpp
